# Pro.Engineer.C.BoltBearingResistanceTerminal

./: .gitignore  README.md
bolt_bearing_245/: CMakeLists.txt  main.c  temp_function.c  temp_function.h
bolt_bearing_255/: CMakeLists.txt  main.c  temp_function.c  temp_function.h
bolt_bearing_355/: CMakeLists.txt  main.c  temp_function.c  temp_function.h
files/: tabl_B_3.csv  tabl_G_5.csv  tabl_G_6.csv  tabl_G_9.csv
